# polysemy

./: .gitignore  Distance_ANOVA.ipynb  GaussianClustering.ipynb  LSTM_Emb.ipynb  README.md  Sentence test.ipynb  Untitled.ipynb  contexutal_word_similarity.ipynb  dictionary_corpus.py  file_extraction.py  forget_gate.ipynb  get_emb.py  h1_h2_Extraction.ipynb  ip  lexical_check.py  lm_argparser.py  main.py  model.py  modulated_heatmap.ipynb  pyproject.toml  sent_feature_extraction.py  sigmoid.ipynb  utils.py
data/: Switzerland_1_.txt  Switzerland_2_.txt  bank_1_ins.txt  bank_2_river.txt  book_1_verb.txt  book_2_noun.txt  books_1_verb.txt  books_2_noun.txt  can_1_cannot.txt  can_2_soda.txt  chicken_1_meat.txt  chicken_2_animal.txt  computer_1_.txt  computer_2_.txt  dates_1_verb.txt  dates_2_noun.txt  door_1_figure.txt  door_2_ground.txt  duck_1_meat.txt  duck_2_animal.txt  even_1_ad.txt  even_2_num.txt  fish_1_meat.txt  fish_2_animal.txt  form_1_verb.txt  form_2_noun.txt  lamb_1_meat.txt  lamb_2_animal.txt  like_1_verb.txt  like_2_prep.txt  line_1_.txt  mistakes_1_verb.txt  mistakes_2_noun.txt  moves_1_verb.txt  moves_2_noun.txt  pencil_1_.txt  pencil_2_.txt  potato_1_dish.txt  potato_2_plant.txt  power_1_J.txt  (+24 more)
tables/: .~lock.distance.csv#  distance.csv
